; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/rtl8712/extr_rtl8712_led.c_r8712_DeInitSwLeds.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/rtl8712/extr_rtl8712_led.c_r8712_DeInitSwLeds.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct._adapter = type { %struct.led_priv }
%struct.led_priv = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @r8712_DeInitSwLeds(%struct._adapter* %0) #0 {
  %2 = alloca %struct._adapter*, align 8
  %3 = alloca %struct.led_priv*, align 8
  store %struct._adapter* %0, %struct._adapter** %2, align 8
  %4 = load %struct._adapter*, %struct._adapter** %2, align 8
  %5 = getelementptr inbounds %struct._adapter, %struct._adapter* %4, i32 0, i32 0
  store %struct.led_priv* %5, %struct.led_priv** %3, align 8
  %6 = load %struct.led_priv*, %struct.led_priv** %3, align 8
  %7 = getelementptr inbounds %struct.led_priv, %struct.led_priv* %6, i32 0, i32 1
  %8 = call i32 @DeInitLed871x(i32* %7)
  %9 = load %struct.led_priv*, %struct.led_priv** %3, align 8
  %10 = getelementptr inbounds %struct.led_priv, %struct.led_priv* %9, i32 0, i32 0
  %11 = call i32 @DeInitLed871x(i32* %10)
  ret void
}

declare dso_local i32 @DeInitLed871x(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
